Alignment fix

--- a/new-2014-site/styles/style.scss
+++ b/new-2014-site/styles/style.scss
@@ -235,7 +235,7 @@ input.email {
   text-align: center;
 }
 #mc-embedded-subscribe {
-  margin-left: -107px;
+  margin-left: -115px;
   box-shadow: 0 2px 2px 0 rgba(#000, 0.39), inset 0 1px 0 0 rgba(#fff, 0.41);
   font-size: 13px;
 }
